...

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:checkedButton="@id/myEventsButton">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/myEventsButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="My Events" />   <!-- optional icon -->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/availableEventsButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Available Events" />   <!-- optional icon -->

...
