...


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Entrants:"
                        android:textColor="@color/text_secondary"
                        android:textSize="14dp" />


                    <TextView
                        android:id="@+id/tv_event_entrants_number"
...
                            app:tint="@color/white" />
                        <TextView
                            android:id="@+id/btn_action_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="50dp"
                            android:text="Register"
                            android:layout_marginLeft="2dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="12sp"/>

                    </LinearLayout>
...
